# uec

./: CHANGELOG.md  Cargo.toml  LICENCE  README.md  winget-publish.ps1
.github/workflows/: release.yml  rust.yml
src/: config.rs  consts.rs  editor.rs  main.rs  uproject.rs
wix/: License.rtf  main.wxs
