[package]
name = "uec"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
panic = 'abort'
lto = true

[profile.dev.package."*"]
opt-level = 2

[dependencies]
clap = { version = "4", features = ["derive"] }
confy = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
