[package]
name = "uec"
version = "0.3.1"
edition = "2021"
authors = ["Piotr Siuszko <siuszko@zoho.com>"]
repository = "https://github.com/Leinnan/uec"
homepage = "https://github.com/Leinnan/uec"
readme = "README.md"
license = "MIT"
keywords = ["cli", "unreal", "unreal-engine-5", "gamedev", "game-development"]
categories = ["command-line-utilities", "development-tools"]
description = "Unreal Engine CLI helper tool"
exclude = ["/.github", "/wix"]

[profile.release]
opt-level = 'z'
panic = 'abort'
lto = true

[profile.dev.package."*"]
opt-level = 2

[dependencies]
clap = { version = "4", features = ["derive"] }
confy = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
colour = "2"
